--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
-GROQ_API_KEY=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
+GROQ_API_KEY=
 GROQ_MODEL_NAME=meta-llama/llama-4-scout-17b-16e-instruct  
 OPENAI_API_KEY=your-openai-api-key   
 OPENAI_MODEL_NAME=gpt-3.5-turbo          
